tests/integration/snapshots/integration__conformance__i_string_utf-8_invalid_sequence.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [91, 34, 230, 151, 165, 209, 136, 250, 34, 93]
stdout ---

stderr ---
error: source did not contain valid utf8
 --> stdin
  |
