tests/integration/snapshots/integration__conformance__i_string_utf16be_no_bom.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
raw bytes: [0, 91, 0, 34, 0, 233, 0, 34, 0, 93]
stdout ---

stderr ---
error: source did not contain valid utf8
 --> stdin
  |
