tests/integration/snapshots/integration__conformance__i_string_utf16le_no_bom.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [91, 0, 34, 0, 233, 0, 34, 0, 93, 0]
stdout ---

stderr ---
error: expected a continuation byte, found 0x00
 --> stdin:1:5
  |
1 | [␀"␀�␀"␀]␀
  |     ^
