tests/integration/snapshots/integration__conformance__i_string_utf8_surrogate_u+d800.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
raw bytes: [91, 34, 237, 160, 128, 34, 93]
stdout ---

stderr ---
error: invalid surrogate code point U+D800
 --> stdin:1:3
  |
1 | ["���"]
  |   ^
