tests/integration/snapshots/integration__conformance__i_string_utf8_surrogate_u+d800.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
raw bytes: [91, 34, 237, 160, 128, 34, 93]
stderr ---
error: source did not contain valid utf8
 --> stdin
  |
